Fix hero image overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ ul {
     color: white;
     margin: 50px 10px;
     padding: 20px 20px;
+    max-width: 350px;
 }
 
 .service-info h4{
@@ -30,6 +31,7 @@ ul {
     height: 500px;
     min-width: 100%;
     object-fit: cover;
+    max-width: 100%;
 }
 
 .navigation-menu {
